variables.RunFour.scala.error
Compilation error:
RunFour:4: error: not found: value estSurBicuit
  if (estSurBicuit()){
      ^